# kdevcxx_with_ai

./: .dockerignore  .gitignore  CMakeLists.txt  Containerfile
ai_processing/: CMakeLists.txt
ai_processing/include/: network.h
ai_processing/include/aiprocess/: app_settings.h
ai_processing/source/: ai_processing.cc  network.cc
cmake/: CPM.cmake
src/: CMakeLists.txt
src/kate_with_ai/: CMakeLists.txt  kate_with_ai.cc
src/kdevcxx_with_ai/: CMakeLists.txt
src/plugin_common/: CMakeLists.txt  plugin_common.cc
src/plugin_common/include/: plugin_common.h
unittests/: CMakeLists.txt  network_ut.cc  test_server.py
